--- a/views/youthcouncil2016/studyTrip.jade
+++ b/views/youthcouncil2016/studyTrip.jade
@@ -72,12 +72,12 @@ block content
   // Study trip 2016
   // ==========================================================================
   // Study trip 2016 starts: description + gallery
-  section#training.pfblock
+  section#studyTrip.pfblock
     .container
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2015.studyTrip')
+            h2.pfblock-title= t('youthcouncil2016.studyTrip')
             .pfblock-line
             .pfblock-subtitle= t('youthcouncil2016.tripDescription1')
             .pfblock-subtitle= t('youthcouncil2016.tripDescription2')
@@ -113,7 +113,7 @@ block content
                     | Next
                     i.fa.fa-arrow-right
 
-        #linkstrainingPictures
+        #linksstudyTrip
           a(href="../img/studyTrip2016/1.jpg", title="Study trip 2016", data-gallery="")
             img(src="../img/studyTrip2016/1.jpg", alt="1" , height="100", width="120")
 
