fix the view mini projects 2015

--- a/views/index.jade
+++ b/views/index.jade
@@ -93,7 +93,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle1') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc2')
-              a.ajoinus(href='/youthcouncil2016')= t('youthcouncil2016.readMore')
+              a.ajoinus(href='/youthcouncil2016/description')= t('youthcouncil2016.readMore')
         .col-sm-4
           .iconbox.wow.slideInLeft
             .iconbox-icon
@@ -101,7 +101,7 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle2') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc3')
-              a.ajoinus(href='/youthcouncil2016#projects')= t('youthcouncil2016.readMore')
+              a.ajoinus(href='/youthcouncil2016/miniProjects')= t('youthcouncil2016.readMore')
         .col-sm-4
           .iconbox.wow.slideInRight
             .iconbox-icon
@@ -109,7 +109,15 @@ block content
             .iconbox-text
               h3.iconbox-title= t('youthcouncil2016.iconboxTitle3') 
               .iconbox-desc= t('youthcouncil2016.iconboxDesc4')
-              a.ajoinus(href='/youthcouncil2016#training')= t('youthcouncil2016.readMore')
+              a.ajoinus(href='/youthcouncil2016/training')= t('youthcouncil2016.readMore')
+        .col-sm-4
+          .iconbox.wow.slideInRight
+            .iconbox-icon
+              span.icon-badge
+            .iconbox-text
+              h3.iconbox-title= t('youthcouncil2016.studyTrip') 
+              .iconbox-desc= t('youthcouncil2016.iconboxDesc4')
+              a.ajoinus(href='/youthcouncil2016/studyTrip')= t('youthcouncil2016.readMore')
 
       // .row
     // .container
