update view of youth council 2013

--- a/views/index.jade
+++ b/views/index.jade
@@ -139,7 +139,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-8.jpg",height="250", width="360",alt="img01")
               figcaption                
-                a(href='/youthcouncil2015#training')
+                a(href='/youthcouncil2015/training')
                 h2= t('youthcouncil2015.figCaptionTitle11')
                   span= t('youthcouncil2015.figCaptionTitle12') 
                 p= t('youthcouncil2015.figCaptionDescription1')
@@ -148,7 +148,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-9.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2015#miniprojects')
+                a(href='/youthcouncil2015/miniprojects')
                 h2= t('youthcouncil2015.figCaptionTitle21')
                   span= t('youthcouncil2015.figCaptionTitle22')
                 p= t('youthcouncil2015.figCaptionDescription2')
@@ -157,7 +157,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-7.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2015#studyTrip')
+                a(href='/youthcouncil2015/studyTrip')
                 h2= t('youthcouncil2015.figCaptionTitle41')
                   span= t('youthcouncil2015.figCaptionTitle42')
                 p= t('youthcouncil2015.figCaptionDescription4')
@@ -180,7 +180,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-1.jpg",height="250", width="360",alt="img01")
               figcaption                
-                a(href='/youthcouncil2013#training')
+                a(href='/youthcouncil2013/training')
                 h2= t('youthcouncil2013.figCaptionTitle11')
                   span= t('youthcouncil2013.figCaptionTitle12') 
                 p= t('youthcouncil2013.figCaptionDescription1')
@@ -189,7 +189,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-2.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013#miniprojects')
+                a(href='/youthcouncil2013/miniprojects')
                 h2= t('youthcouncil2013.figCaptionTitle21')
                   span= t('youthcouncil2013.figCaptionTitle22')
                 p= t('youthcouncil2013.figCaptionDescription2')
@@ -198,7 +198,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-3.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013#artCompetition')
+                a(href='/youthcouncil2013/artCompetition')
                 h2= t('youthcouncil2013.figCaptionTitle31')
                   span= t('youthcouncil2013.figCaptionTitle32')
                 p= t('youthcouncil2013.figCaptionDescription3')
@@ -207,7 +207,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-4.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013#studyTrip')
+                a(href='/youthcouncil2013/studyTrip')
                 h2= t('youthcouncil2013.figCaptionTitle41')
                   span= t('youthcouncil2013.figCaptionTitle42')
                 p= t('youthcouncil2013.figCaptionDescription4')
@@ -216,7 +216,7 @@ block content
             figure.effect-bubba
               img(src="/img/item-5.jpg",height="250", width="360",alt="img01")
               figcaption
-                a(href='/youthcouncil2013#newspaper')
+                a(href='/youthcouncil2013/newspaper')
                 h2= t('youthcouncil2013.figCaptionTitle51')
                   span= t('youthcouncil2013.figCaptionTitle52')
                 p= t('youthcouncil2013.figCaptionDescription5')
