--- a/views/youthcouncil2013/training.jade
+++ b/views/youthcouncil2013/training.jade
@@ -7,10 +7,10 @@ block content
     div#status
 
   // Home start
-  section#homeyouthcouncil2016.pfblock-image.screen-height
+  section#homeyouthcouncil2013.pfblock-image.screen-height
     .home-overlay
     .intro
-      .start= t('home.start')
+      .start= t('home.start2013')
       a(href='#training')= t('home.achievement')
       .start= t('home.startDescription')
     a(href='#training')
@@ -75,9 +75,9 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2016.training2016')
+            h2.pfblock-title= t('youthcouncil2013.training2013')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2016.trainingDescription')
+            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription1')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         // The Bootstrap Image Gallery lightbox, should be a child element of the document body
@@ -108,84 +108,115 @@ block content
                     i.fa.fa-arrow-right
 
         #linkstrainingPictures
-          a(href="../img/training2016/1.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/1.jpg", alt="1" , height="100", width="120")
+          a(href="../img/training2013/1.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/1.jpg", alt="1" , height="100", width="120")
 
-          a(href="../img/training2016/2.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/2.jpg", alt="2", height="100", width="120")
+          a(href="../img/training2013/2.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/2.jpg", alt="2", height="100", width="120")
 
-          a(href="../img/training2016/3.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/3.jpg", alt="3" , height="100", width="120")
+          a(href="../img/training2013/3.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/3.jpg", alt="3" , height="100", width="120")
 
-          a(href="../img/training2016/4.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/4.jpg", alt="4" , height="100", width="120")
+          a(href="../img/training2013/4.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/4.jpg", alt="4" , height="100", width="120")
 
-          a(href="../img/training2016/6.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/6.jpg", alt="6" , height="100", width="120")
+          a(href="../img/training2013/5.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/5.jpg", alt="5" , height="100", width="120")
 
-          a(href="../img/training2016/7.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/7.jpg", alt="7" , height="100", width="120")
+          a(href="../img/training2013/6.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/6.jpg", alt="6" , height="100", width="120")
 
-          a(href="../img/training2016/8.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/8.jpg", alt="8" , height="100", width="120")
+          a(href="../img/training2013/7.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/7.jpg", alt="7" , height="100", width="120")
 
-          a(href="../img/training2016/9.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/9.jpg", alt="9" , height="100", width="120")
+          a(href="../img/training2013/8.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/8.jpg", alt="8" , height="100", width="120")
 
-          a(href="../img/training2016/10.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/10.jpg", alt="10" , height="100", width="120")
+          a(href="../img/training2013/9.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/9.jpg", alt="9" , height="100", width="120")
 
-          a(href="../img/training2016/11.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/11.jpg", alt="11" , height="100", width="120")
+          a(href="../img/training2013/10.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/10.jpg", alt="10" , height="100", width="120")
 
-          a(href="../img/training2016/12.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/12.jpg", alt="12" , height="100", width="120")
+          a(href="../img/training2013/11.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/11.jpg", alt="11" , height="100", width="120")
 
-          a(href="../img/training2016/13.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/13.jpg", alt="13" , height="100", width="120")
+          a(href="../img/training2013/12.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/12.jpg", alt="12" , height="100", width="120")
 
-          a(href="../img/training2016/14.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/14.jpg", alt="14" , height="100", width="120")
+          a(href="../img/training2013/13.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/13.jpg", alt="13" , height="100", width="120")
 
-          a(href="../img/training2016/15.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/15.jpg", alt="15" , height="100", width="120")
+          a(href="../img/training2013/14.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/14.jpg", alt="14" , height="100", width="120")
 
-          a(href="../img/training2016/16.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/16.jpg", alt="16" , height="100", width="120")
+          a(href="../img/training2013/15.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/15.jpg", alt="15" , height="100", width="120")
 
-          a(href="../img/training2016/17.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/17.jpg", alt="17" , height="100", width="120")
+          a(href="../img/training2013/16.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/16.jpg", alt="16" , height="100", width="120")
 
-          a(href="../img/training2016/18.jpg", title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/18.jpg", alt="18" , height="100", width="120")
+          a(href="../img/training2013/17.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/17.jpg", alt="17" , height="100", width="120")
 
-          a(href="../img/training2016/19.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/19.jpg", alt="19" , height="100", width="120")
+          a(href="../img/training2013/18.jpg", title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/18.jpg", alt="18" , height="100", width="120")
 
-          a(href="../img/training2016/20.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/20.jpg", alt="20" , height="100", width="120")
+          a(href="../img/training2013/19.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/19.jpg", alt="19" , height="100", width="120")
 
-          a(href="../img/training2016/21.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/21.jpg", alt="21" , height="100", width="120")
+          a(href="../img/training2013/20.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/20.jpg", alt="20" , height="100", width="120")
 
-          a(href="../img/training2016/22.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/22.jpg", alt="22" , height="100", width="120")
+          a(href="../img/training2013/21.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/21.jpg", alt="21" , height="100", width="120")
 
-          a(href="../img/training2016/23.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/23.jpg", alt="23" , height="100", width="120")
+          a(href="../img/training2013/22.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/22.jpg", alt="22" , height="100", width="120")
 
-          a(href="../img/training2016/24.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/24.jpg", alt="24" , height="100", width="120")
+          a(href="../img/training2013/23.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/23.jpg", alt="23" , height="100", width="120")
 
-          a(href="../img/training2016/25.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/25.jpg", alt="25" , height="100", width="120")
+          a(href="../img/training2013/24.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/24.jpg", alt="24" , height="100", width="120")
 
-          a(href="../img/training2016/26.jpg",title="Training & workshop 2016", data-gallery="")
-            img(src="../img/training2016/26.jpg", alt="26" , height="100", width="120")
+          a(href="../img/training2013/25.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/25.jpg", alt="25" , height="100", width="120")
 
-    // .container
-  // training & workshop 2016 ends: description + gallery
+          a(href="../img/training2013/26.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/26.jpg", alt="26" , height="100", width="120")
 
+          a(href="../img/training2013/27.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/27.jpg", alt="27" , height="100", width="120")
+
+          a(href="../img/training2013/28.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/28.jpg", alt="28" , height="100", width="120")
+
+          a(href="../img/training2013/29.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/29.jpg", alt="29" , height="100", width="120")
+
+          a(href="../img/training2013/30.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/30.jpg", alt="30" , height="100", width="120")
+
+          a(href="../img/training2013/31.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/31.jpg", alt="31" , height="100", width="120")
+
+          a(href="../img/training2013/32.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/32.jpg", alt="32" , height="100", width="120")
+
+          a(href="../img/training2013/33.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/33.jpg", alt="33" , height="100", width="120")
+
+          a(href="../img/training2013/34.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/34.jpg", alt="34" , height="100", width="120")
+
+          a(href="../img/training2013/35.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/35.jpg", alt="35" , height="100", width="120")
+
+          a(href="../img/training2013/36.jpg",title="Training & workshop 2013", data-gallery="")
+            img(src="../img/training2013/36.jpg", alt="36" , height="100", width="120")
+    // .contaier
+  // training & workshop 2013 ends: description + gallery
 
 block footer
 
