--- a/views/youthcouncil2013/studyTrip.jade
+++ b/views/youthcouncil2013/studyTrip.jade
@@ -7,10 +7,10 @@ block content
     div#status
 
   // Home start
-  section#homeyouthcouncil2016.pfblock-image.screen-height
+  section#homeyouthcouncil2013.pfblock-image.screen-height
     .home-overlay
     .intro
-      .start= t('home.start')
+      .start= t('home.start2013')
       a(href='#training')= t('home.achievement')
       .start= t('home.startDescription')
     a(href='#training')
@@ -77,13 +77,9 @@ block content
       .row
         .col-sm-6.col-sm-offset-3
           .pfblock-header.wow.fadeInUp
-            h2.pfblock-title= t('youthcouncil2016.studyTrip')
+            h2.pfblock-title= t('youthcouncil2013.studyTrip')
             .pfblock-line
-            .pfblock-subtitle= t('youthcouncil2016.tripDescription1')
-            .pfblock-subtitle= t('youthcouncil2016.tripDescription2')
-            .pfblock-subtitle= t('youthcouncil2016.tripDescription3')
-            .pfblock-subtitle= t('youthcouncil2016.tripDescription4')
-            .pfblock-subtitle= t('youthcouncil2016.tripDescription5')
+            .pfblock-subtitle= t('youthcouncil2013.figCaptionDescription2')
       // The Gallery as lightbox dialog, should be a child element of the document body
       .container
         // The Bootstrap Image Gallery lightbox, should be a child element of the document body
@@ -113,27 +109,80 @@ block content
                     | Next
                     i.fa.fa-arrow-right
 
-        #linksstudyTrip
-          a(href="../img/studyTrip2016/1.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/1.jpg", alt="1" , height="100", width="120")
+        #linksstudyTrip2013
+          a(href="../img/studyTrip2013/1.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/1.jpg", alt="1" , height="100", width="120")
 
-          a(href="../img/studyTrip2016/2.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/2.jpg", alt="2", height="100", width="120")
+          a(href="../img/studyTrip2013/2.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/2.jpg", alt="2", height="100", width="120")
 
-          a(href="../img/studyTrip2016/3.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/3.jpg", alt="3" , height="100", width="120")
+          a(href="../img/studyTrip2013/3.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/3.jpg", alt="3" , height="100", width="120")
 
-          a(href="../img/studyTrip2016/4.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/4.jpg", alt="4" , height="100", width="120")
+          a(href="../img/studyTrip2013/4.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/4.jpg", alt="4" , height="100", width="120")
 
-          a(href="../img/studyTrip2016/5.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/5.jpg", alt="5" , height="100", width="120")
+          a(href="../img/studyTrip2013/5.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/5.jpg", alt="5" , height="100", width="120")
 
-          a(href="../img/studyTrip2016/6.jpg", title="Study trip 2016", data-gallery="")
-            img(src="../img/studyTrip2016/6.jpg", alt="6" , height="100", width="120")
+          a(href="../img/studyTrip2013/6.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/6.jpg", alt="6" , height="100", width="120")
 
+          a(href="../img/studyTrip2013/7.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/7.jpg", alt="7" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/8.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/8.jpg", alt="8" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/9.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/9.jpg", alt="9" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/10.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/10.jpg", alt="10" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/11.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/11.jpg", alt="11" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/12.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/12.jpg", alt="12" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/13.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/13.jpg", alt="13" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/14.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/14.jpg", alt="14" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/15.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/15.jpg", alt="15" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/16.jpg",title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/16.jpg", alt="16" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/17.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/17.jpg", alt="17" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/18.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/18.jpg", alt="18" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/19.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/19.jpg", alt="19" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/20.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/20.jpg", alt="20" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/21.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/21.jpg", alt="21" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/22.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/22.jpg", alt="22" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/23.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/23.jpg", alt="23" , height="100", width="120")
+
+          a(href="../img/studyTrip2013/24.jpg", title="Study trip 2013", data-gallery="")
+            img(src="../img/studyTrip2013/24.jpg", alt="24" , height="100", width="120")
     // .contaier
-  // study Trip 2016 ends: description + gallery
+  // study Trip 2013 ends: description + gallery
 block footer
 
   script.
